docs: add documentation for Update Openings
